# research-kit

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  README.md  REFACTORING.md  SUPPORT.md  go.mod  go.sum  main.go  pyproject.toml  research-driven.md
.claude/commands/: research.analyze.md  research.define.md  research.execute.md  research.methodology.md  research.principles.md  research.publish.md  research.quality.md  research.refine.md  research.synthesize.md  research.validate.md
.github/: CONFIGURATION.md
.github/workflows/: release.yml
.research/templates/: agent-file-template.md  analysis-template.md  execution-template.md  literature-review-template.md  methodology-template.md  presentation-template.md  research-tasks-template.md  synthesis-template.md  tasks-template.md
docs/: README.md  docfx.json  index.md  installation.md  local-development.md  quickstart.md  the-fork.md  toc.yml
memory/: research-principles.md
principles/: research-principles.md
research/001-ai-dlc-spec-research/: data-sources.md  definition.md  findings.md  methodology.md
scripts/bash/: check-prerequisites.sh  common.sh  create-new-research.sh  download-source.sh  quality-gate.sh  (+6 more)
services/: deepseek.go
templates/: analysis-template.md  checklist-template.md  execution-template.md  literature-review-template.md  methodology-template.md  plan-template.md  references.bib  research-definition-template.md  research-tasks-template.md  synthesis-template.md  tasks-template.md  vscode-settings.json
tools/: deepseek.go  gemini.go  sequentialthinking.go
(+43 files in other folders)
