[project]
name = "research-cli"
version = "1.0.0"
description = "Research Kit CLI - A tool to bootstrap deep research projects with AI agents using structured research methodology."
requires-python = ">=3.11"
dependencies = [
    "typer",
    "rich",
    "httpx[socks]",
    "platformdirs",
    "readchar",
    "truststore>=0.10.4",
]

[project.scripts]
research = "research_cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/research_cli"]

